fix: shout timestamps not showing full date on hover a year old

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -5387,7 +5387,7 @@ the body text becomes bigger by default - this reverts that */
     position: relative;
 
     /* text */
-    &:before {
+    /*&:before {
         content: 'Copy link';
         color: hsl(var(--l2-c)) !important;
         font-size: 12px;
@@ -5399,19 +5399,19 @@ the body text becomes bigger by default - this reverts that */
         transition-property: opacity;
         transition-duration: var(--trans);
         transition-timing-function: var(--trans-function);
-    }
+    }*/
 
     /* hide date on hover */
-    &:hover {
+    /*&:hover {
         color: transparent !important;
         transition: none;
 
         /* ..then show pseudo elements */
-        &:before {
+        /*&:before {
             opacity: 1;
             transition: none;
         }
-    }
+    }*/
 }
 
 .shout-user-avatar, .shout-user-avatar-link {
@@ -7241,14 +7241,6 @@ input:is([name="track_name"], [name="artist_name"], [name="album_name"], [name="
         }
     }
 
-    [data-bleh--seasonal_overlays="true"][data-bleh--season="fall"] &,
-    [data-bleh--seasonal_overlays="true"][data-bleh--season="christmas"] &,
-    [data-bleh--seasonal_overlays="true"][data-bleh--season="new_years"] & {
-        background-image: var(--overlay-snow-min), linear-gradient(180deg, rgba(190,233,250,0.04) 0%, rgba(0,0,0,0) 100%) !important;
-        background-repeat: repeat-x !important;
-        background-position: unset !important;
-    }
-
     &:not(
         .modal--avatar
     ) {
@@ -7256,6 +7248,14 @@ input:is([name="track_name"], [name="artist_name"], [name="album_name"], [name="
         [data-bleh--theme="oled"] & {
             background: hsl(var(--b5)) !important;
             box-shadow: var(--override-full-shadow, 0 0 0 1px var(--card-border-base) inset, var(--menu-shadow)) !important;
+        }
+
+        [data-bleh--seasonal_overlays="true"][data-bleh--season="fall"] &,
+        [data-bleh--seasonal_overlays="true"][data-bleh--season="christmas"] &,
+        [data-bleh--seasonal_overlays="true"][data-bleh--season="new_years"] & {
+            background-image: var(--overlay-snow-min), linear-gradient(180deg, rgba(190,233,250,0.04) 0%, rgba(0,0,0,0) 100%) !important;
+            background-repeat: repeat-x !important;
+            background-position: unset !important;
         }
     }
 }
@@ -15785,6 +15785,14 @@ button.bleh--gallery-bookmark-image-btn {
             background-color: hsl(var(--b5));
             box-shadow: 0 0 0 1px var(--card-border-base) inset, var(--card-shadow);
         }
+
+        [data-bleh--seasonal_overlays="true"][data-bleh--season="fall"] &,
+        [data-bleh--seasonal_overlays="true"][data-bleh--season="christmas"] &,
+        [data-bleh--seasonal_overlays="true"][data-bleh--season="new_years"] & {
+            background-image: var(--overlay-ice), linear-gradient(180deg, rgba(190,233,250,0.04) 0%, rgba(0,0,0,0) 100%) !important;
+            background-repeat: repeat-x !important;
+            background-position: unset !important;
+        }
     }
 
     [data-bleh--theme="oled"] &,
@@ -17798,6 +17806,14 @@ h4 {
 
             border-radius: var(--item-big-radius);
             box-shadow: var(--card-shadow);
+
+            [data-bleh--seasonal_overlays="true"][data-bleh--season="fall"] &,
+            [data-bleh--seasonal_overlays="true"][data-bleh--season="christmas"] &,
+            [data-bleh--seasonal_overlays="true"][data-bleh--season="new_years"] & {
+                background-image: var(--overlay-ice), linear-gradient(180deg, rgba(190,233,250,0.04) 0%, rgba(0,0,0,0) 100%) !important;
+                background-repeat: repeat-x !important;
+                background-position: unset !important;
+            }
         }
     }
 
